featrue: add shrink animation; fix: text size,canvas overflow are fixed

--- a/webComponent.css
+++ b/webComponent.css
@@ -34,7 +34,7 @@
     justify-content: center;
     align-items: center;
     background-color: #000;
-    font-size: 100px;
+    font-size: 3vw;
     font-family: 'Courier New', Courier, monospace;
     overflow: hidden;
 }
